<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/list_item_bg"
    android:padding="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height_detail_screen">

        <ImageView
            android:id="@+id/header_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:contentDescription="@string/toolbar_image"
            android:fitsSystemWindows="true"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/movieDescSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/movieDescSubTitle"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/movieDescTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/movieDescTitle"
            android:layout_above="@id/movieDescSubTitle"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="4dp"/>



    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:drawableStart="@drawable/ic_star"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/synopsis"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score"
            android:textColor="@color/list_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating"
            android:textColor="@color/list_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/popularity"
            android:textColor="@color/list_text_color"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_marginTop="20dp"
        android:background="@color/list_text_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/director"
            android:textColor="@color/list_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/writer"
            android:textColor="@color/list_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_writer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/actor"
            android:textColor="@color/list_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp" />
    </LinearLayout>


</LinearLayout>


